UtahLiveDataTest/src/objects/SoleSourceAwardRecipient__c.object
<CustomObject>
    <description>[Business] Need to revisit this object (It may not be required and can be DOH specific)</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>External Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sole Source Award Recipients</relationshipLabel>
        <relationshipName>Sole_Source_Award_Recipients</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FundingOpportunity__c</fullName>
        <label>Funding Opportunity</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipLabel>Sole Source Award Recipients</relationshipLabel>
        <relationshipName>Sole_Source_Award_Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sole Source Award Recipient</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sole Source Award Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>